Fix text not wrapping

--- a/src/app/modules/home/components/home.component.css
+++ b/src/app/modules/home/components/home.component.css
@@ -2,3 +2,10 @@ ul {
   list-style: none;
   padding: 0;
 }
+
+li {
+  transition: 1s;
+}
+li:hover {
+  transform: scale(1.02);
+}
