--- a/src/app/modules/products/components/listing/listing.component.css
+++ b/src/app/modules/products/components/listing/listing.component.css
@@ -3,4 +3,5 @@ mat-card {
   min-height: 12em;
   min-width: 9em;
   max-width: 9em;
+  overflow-wrap: break-word;
 }
